started my own inline display experiment

--- a/register.html
+++ b/register.html
@@ -5,6 +5,8 @@
     <title>register</title>
   </head>
   <body>
+    <!--use GET not POST!-->
+    <!-- comment this section -->
     <form class="" action="" method="get">
     First Name:<input type="text" name="firstname" value=""><br>
     Last Name:<input type="text" name="lastname" value=""> <br>
