--- a/section7_adv/boxXbox_example/index.html
+++ b/section7_adv/boxXbox_example/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <span class="bbox">
-      <span class="box1">A</span>
-      <span class="box2">B<span>
-    </span>
+    <div class="test">
+      <div class="box1">A</div>
+      <div class="box2">B</div>
+    </div>
+
   </body>
 </html>
