tried to create page w/o help

--- a/section8_bootstrap/startup/index.html
+++ b/section8_bootstrap/startup/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <img src="header.jpg" alt="Ominously Illuminated Laptop From Startup GODS">
+          <img src="header.jpg" alt="Ominously Illuminated Laptop From Startup GODS"> <!-- really no good reason why I chose to place the img in this div -->
         </div>
       </div>
     </div>
