--- a/section8_bootstrap/startup/index.html
+++ b/section8_bootstrap/startup/index.html
@@ -3,6 +3,11 @@
   <head>
     <title>Startup</title>
 
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above tags make it so the page is mobile first by design       -->
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -13,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>The Biggest startup event of the year</h1>
+    <h1><strong>The Biggest startup event of the year</strong></h1>
+    <button> Find out more</button>
   </body>
 </html>
