--- a/section8_bootstrap/startup/index.html
+++ b/section8_bootstrap/startup/index.html
@@ -18,7 +18,19 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1><strong>The Biggest startup event of the year</strong></h1>
-    <button> Find out more</button>
+    <div class="container d-flex align-items-center h-100">
+      <div class="row">
+        <header class="text-center col-12">
+          <h1 class="text-uppercase"<strong>The Biggest startup event of the year</strong></h1>
+        </header>
+        <div class="buffer col-12"></div>
+        <section class="text-center col-12">
+          <hr>
+          <a href="https://www.google.com">
+            <button class="btn btn-primary btn-xl text-uppercase"> Find out more</button>
+          </a>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
