--- a/section8_bootstrap/startup/index.html
+++ b/section8_bootstrap/startup/index.html
@@ -26,7 +26,7 @@
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr>
-          <a href="https://www.google.com">
+          <a href="https://www.simpacti.com">
             <button class="btn btn-primary btn-xl text-uppercase"> Find out more</button>
           </a>
         </section>
