rearranging things quit

--- a/section8_bootstrap/challenge8/creative-tim-gsd/index.html
+++ b/section8_bootstrap/challenge8/creative-tim-gsd/index.html
@@ -68,16 +68,21 @@
         <div class="img-src" style="background-image: url('assets/img/computer.jpg')"></div>
         <div class='img-src blur' style="background-image: url('assets/img/computer_blur.png')"></div>
     </div>
-		<div class='blurred-container'>
-        <div class="motto">
-            <!-- <div>What if...</div> -->
-            <div class="border">Technology was designed to benefit us and improve our lives, instead of extracting from us and distracting us?.</div>
-						<!-- <div class="border"></div> -->
-            <!-- <div>Done</div> -->
-        </div>
-        <div class="img-src" style="background-image: url('assets/img/group.jpg')"></div>
-        <div class='img-src blur' style="background-image: url('assets/img/group_blur.png')"></div>
-    </div>
+
+
+</div>
+
+<div class="main">
+	<div class='blurred-container'>
+			<div class="motto">
+					<!-- <div>What if...</div> -->
+					<div class="border">Technology was designed to benefit us and improve our lives, instead of extracting from us and distracting us?.</div>
+					<!-- <div class="border"></div> -->
+					<!-- <div>Done</div> -->
+			</div>
+			<div class="img-src" style="background-image: url('assets/img/group.jpg')"></div>
+			<div class='img-src blur' style="background-image: url('assets/img/group_blur.png')"></div>
+	</div>
 
 </div>
 
