--- a/section8_bootstrap/challenge8/mashup-pure/index.html
+++ b/section8_bootstrap/challenge8/mashup-pure/index.html
@@ -17,7 +17,7 @@
 
 
 
-  <title>Future of Web</title>  
+  <title>Future of Web</title>
 
 <link href="./main.a3f694c0.css" rel="stylesheet"></head>
 
@@ -43,14 +43,14 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./about.html" title=""> About</a></li>
-          <li><a href="./pricing.html" title=""> Pricing </a></li>
+          <!-- <li><a href="./pricing.html" title=""> Pricing </a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
-          <li><a href="./components.html" title="">Components</a></li>
-          <li>
+          <li><a href="./components.html" title="">Components</a></li> -->
+          <!-- <li>
             <p>
               <a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a>
             </p>
-          </li>
+          </li> -->
 
         </ul>
       </div>
@@ -60,17 +60,14 @@
 
 
 
-<div class="white-text-container background-image-container" style="background-image: url('./assets/images/img-home.jpg')">
-    <div class="opacity"></div>
-    <div class="container">
+<div class="white-text-container background-image-container" style="background-image: url('./assets/images/group1.jpg')">
+        <div class="container">
         <div class="row">
 
             <div class="col-md-6">
-                <h1>Posuere lorem Ipsum</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Adipiscing commodo elit at imperdiet dui accumsan sit. Ipsum dolor sit
-                    amet consectetur adipiscing elit. </p>
-                 <a href="./download.html" title="" class="btn btn-lg btn-primary">Download</a>
+                <h1>What if...</h1>
+                <p>Technology was thoughtfully designed to help us and benefit us rather than extract from us and divide us? </p>
+                 <!-- <a href="./download.html" title="" class="btn btn-lg btn-primary">Download</a> -->
             </div>
 
         </div>
@@ -82,9 +79,8 @@
             <div class="row">
                 <div class="col-md-12 section-container-spacer">
                     <div class="text-center">
-                        <h2>Vivamus laoreet</h2>
-                        <p> Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing.<br> Porta non
-                            pulvinar neque laoreet. Viverra ipsum nunc aliquet bibendum. </p>
+                        <h2>It's time for a change...</h2>
+                        <p> Let's build web technlogy that...</p>
                     </div>
                 </div>
 
@@ -93,12 +89,10 @@
                         <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
-                        <h3>Consectetur</h3>
+                        <h3>Let's talk</h3>
                     </div>
                     <div>
-                        <p>Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing. Porta
-                            non pulvinar neque laoreet. Viverra ipsum nunc aliquet bibendum. Iaculis urna id volutpat lacus.
-                            Turpis egestas pretium aenean pharetra magna ac.</p>
+                        <p>We need to incentivize users to use technology that is good for them.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -106,26 +100,25 @@
                         <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
-                        <h3>Malesuada</h3>
+                        <h3>Make with love</h3>
                     </div>
                     <div>
-                        <p>Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing. Porta
-                            non pulvinar neque laoreet. Viverra ipsum nunc aliquet bibendum. Iaculis urna id volutpat lacus.
-                            Turpis egestas pretium aenean pharetra magna ac.
+                        <p>Right now the model of VC funded web tech that soley functions to maximize
+                          profits has no heart. Let's put our hearts into technology 1st and think about
+                          profits 2nd.
                         </p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
+                        <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
-                        <h3>Phasellus</h3>
+                        <h3>Cleanse your soul</h3>
                     </div>
                     <div>
-                        <p>Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing. Porta
-                            non pulvinar neque laoreet. Viverra ipsum nunc aliquet bibendum. Iaculis urna id volutpat lacus.
-                            Turpis egestas pretium aenean pharetra magna ac.
+                        <p>Time is running out but we still have time. Now is the time clean your values
+                          off and re-align them with your fellow humans.
                         </p>
                     </div>
                 </div>
@@ -145,12 +138,21 @@
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
                                 <img class="img-responsive" src="./assets/images/img-05.jpg" alt="First slide">
+                                <div class="carousel-caption">
+                                  <p>Look how much fun this is!</p>
+                                </div>
                             </div>
                             <div class="item">
                                 <img class="img-responsive" src="./assets/images/img-07.jpg" alt="Second slide">
+                                <div class="carousel-caption">
+                                  <p>We love human technology!</p>
+                                </div>
                             </div>
                             <div class="item">
-                                <img class="img-responsive" src="./assets/images/img-05.jpg" alt="Third slide">
+                                <img class="img-responsive" src="./assets/images/img-09.jpg" alt="Third slide">
+                                <div class="carousel-caption">
+                                  <p>SO happy things are changing!</p>
+                                </div>
                             </div>
                         </div>
                         <ol class="carousel-indicators">
@@ -158,6 +160,16 @@
                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         </ol>
+                        <!-- Left and right controls -->
+  <a class="left carousel-control" href="#carouselExampleIndicators" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carouselExampleIndicators" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
                     </div>
 
 
