using minmax to make nav responsive

--- a/section9_css_grid+layout/css layout/project-start/index.html
+++ b/section9_css_grid+layout/css layout/project-start/index.html
@@ -5,14 +5,16 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-    <div class="zone green">Header</div>
-    <ul id=navbar>
-      <li>About</li>
-      <li>Products</li>
-      <li>Our Team</li>
-      <li>Contact Us</li>
+    <div class="zone green">
+      <ul id="navbar">
+        <li>About</li>
+        <li>Products</li>
+        <li>Our Team</li>
+        <li id="contact">Contact Us</li>
+      </ul>
+    </div>
     </ul>
-    <div class="zone red">Cover</div>
+    <div class="zone red">Cover!!!!</div>
     <div class="zone blue">Project Grid</div>
     <div class="zone yellow">Footer</div>
 </body>
