figured out that LI elements don't count as elements

--- a/section9_css_grid+layout/css layout/project-start/index.html
+++ b/section9_css_grid+layout/css layout/project-start/index.html
@@ -5,17 +5,25 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-    <div class="zone green">
-      <ul id="navbar">
-        <li>About</li>
-        <li>Products</li>
-        <li>Our Team</li>
-        <li id="contact">Contact Us</li>
-      </ul>
+  <div class="zone green">
+    <p>About</p>
+    <p>Products</p>
+    <p>Our Team</p>
+    <p id=contact>Contact Us</p>
+  </div>
+  <div class="zone red">
+    <p id="cover">Cover!!!!</p>
+  </div>
+    <div class="zone blue">
+      <img src="img/data_storage_2_2.png" alt="data storage">
+      <img src="img/desktop_analytics_2.png" alt="">
+      <img src="img/files_2.png" alt="">
+      <img src="img/monitor_coding_2.png" alt="">
+      <img src="img/monitor_settings_2.png" alt="">
+      <img src="img/server_2_2.png" alt="">
+      <img src="img/server_3.png" alt="">
+      <img src="img/server_safe_2.png" alt="">
     </div>
-    </ul>
-    <div class="zone red">Cover!!!!</div>
-    <div class="zone blue">Project Grid</div>
     <div class="zone yellow">Footer</div>
 </body>
 </html>
