added restart to restart the project

--- a/section9_css_grid+layout/css layout/project-start/index.html
+++ b/section9_css_grid+layout/css layout/project-start/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
   <title>Layout Master</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
@@ -14,15 +16,24 @@
   <div class="zone red">
     <p id="cover">Cover!!!!</p>
   </div>
-    <div class="zone blue">
+    <div class="zone blue box">
+      <div class="test"><img src="img/data_storage_2_2.png" alt="data storage"width=100%></div>
+      <div class="test"><img src="img/desktop_analytics_2.png" alt="" height=100px width=100px></div>
+      <div class="test">👍</div>
+      <div class="test">👍</div>
+      <!-- <div class="image">
       <img src="img/data_storage_2_2.png" alt="data storage">
+      </div>
+      <div class="image">
       <img src="img/desktop_analytics_2.png" alt="">
+      </div>
+
       <img src="img/files_2.png" alt="">
       <img src="img/monitor_coding_2.png" alt="">
       <img src="img/monitor_settings_2.png" alt="">
       <img src="img/server_2_2.png" alt="">
       <img src="img/server_3.png" alt="">
-      <img src="img/server_safe_2.png" alt="">
+      <img src="img/server_safe_2.png" alt=""> -->
     </div>
     <div class="zone yellow">Footer</div>
 </body>
