learnign for the day

--- a/section9_css_grid+layout/css layout/restart/index.html
+++ b/section9_css_grid+layout/css layout/restart/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Layout Master</title>
+  <title>Restart Layout Master</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <div class="zone green">Header
+  <div class="zone green nav">
     <nav>
-      
+      <a>About</a>
+      <a>Products</a>
+      <a>Our Team</a>
+      <a id=contact>Contact Us</a>
     </nav>
   </div>
-  <div class="zone red">Cover</div>
-  <div class="zone blue">Project Grid</div>
-  <div class="zone yellow">Footer</div>
+  <div class="zone red cover">Cover!!!</div>
+  <div class="zone blue grid">
+    <div class="image"><img src="img/data_storage_2_2.png" alt="data storage"></div>
+    <div class="image"><img src="img/desktop_analytics_2.png" alt=""></div>
+    <div class="image ">👍</div>
+    <div class="image">👍</div>
+    <!-- <div class="image">
+    <img src="img/data_storage_2_2.png" alt="data storage">
+    </div>
+    <div class="image">
+    <img src="img/desktop_analytics_2.png" alt="">
+    </div>
+
+    <img src="img/files_2.png" alt="">
+    <img src="img/monitor_coding_2.png" alt="">
+    <img src="img/monitor_settings_2.png" alt="">
+    <img src="img/server_2_2.png" alt="">
+    <img src="img/server_3.png" alt="">
+    <img src="img/server_safe_2.png" alt=""> -->
+  </div>
+  <div class="zone yellow footer">Footer</div>
 </body>
 </html>
