finished up exercise. prob was element size

--- a/section9_css_grid+layout/css layout/restart/index.html
+++ b/section9_css_grid+layout/css layout/restart/index.html
@@ -15,24 +15,17 @@
   </div>
   <div class="zone red cover">Cover!!!</div>
   <div class="zone blue grid">
-    <div class="image"><img src="img/data_storage_2_2.png" alt="data storage"></div>
+    <div class="image"><img src="img/data_storage_2_2.png" alt=""></div>
     <div class="image"><img src="img/desktop_analytics_2.png" alt=""></div>
-    <div class="image ">👍</div>
-    <div class="image">👍</div>
-    <!-- <div class="image">
-    <img src="img/data_storage_2_2.png" alt="data storage">
-    </div>
-    <div class="image">
-    <img src="img/desktop_analytics_2.png" alt="">
-    </div>
-
-    <img src="img/files_2.png" alt="">
-    <img src="img/monitor_coding_2.png" alt="">
-    <img src="img/monitor_settings_2.png" alt="">
-    <img src="img/server_2_2.png" alt="">
-    <img src="img/server_3.png" alt="">
-    <img src="img/server_safe_2.png" alt=""> -->
+    <div class="image"><img src="img/files_2.png" alt=""></div>
+    <div class="image"><img src="img/monitor_coding_2.png" alt=""></div>
+    <div class="image"><img src="img/monitor_settings_2.png" alt=""></div>
+    <div class="image"><img src="img/server_2_2.png" alt=""></div>
+    <div class="image"><img src="img/server_3.png" alt=""></div>
+    <div class="image"><img src="img/server_safe_2.png" alt=""></div>
   </div>
-  <div class="zone yellow footer">Footer</div>
+  <div class="zone yellow footer">
+    <p>made by <3MSG</p>
+  </div>
 </body>
 </html>
