--- a/section9_css_grid+layout/css layout/nice-code/index.html
+++ b/section9_css_grid+layout/css layout/nice-code/index.html
@@ -5,8 +5,15 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <nav class="zone green">Header</nav>
-  <div class="zone red">Cover</div>
+  <nav class="zone green">
+    <ul class="main-nav">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">Our Team</a></li>
+      <li class="push"><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+  <div class="container zone red">Cover!!!</div>
   <div class="zone blue">Project Grid</div>
   <div class="zone yellow">Footer</div>
 </body>
