--- a/section12-DOM/139 DOM Events/index.html
+++ b/section12-DOM/139 DOM Events/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Javascript + DOM</title>
+    <title>DOM Events</title>
   </head>
   <body>
     <h1>Shopping List</h1>
     <p id="first">Get it done today</p>
-    <p class="second">No Excuses!</p>
-    <button type="button" name="button">Click me!</button>
+    <input id="userinput" type="text" name="" placeholder="Enter Items">
+    <button type="button" name="button" id="enter">Enter</button>
     <ul>
       <li class= "bold red" random="23">Notebook</li>
       <li>potatoes</li>
@@ -16,5 +16,6 @@
       <li>corn</li>
       <li>pees</li>
     </ul>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
