finished additional reqs for bg generator. My random button is janky. could be improved with a loop.

--- a/section12-DOM/143-background-generator/index.html
+++ b/section12-DOM/143-background-generator/index.html
@@ -7,8 +7,9 @@
   </head>
   <body id="gradient">
 <h1>Background Generator</h1>
-<input class="color1" type="color" name="color1" value="#00ff00">
-<input class="color2" type="color" name="color2" value="#ff0000">
+<input class="color1" type="color" name="color1" value="#ff0000">
+<input class="color2" type="color" name="color2" value="#ffff00">
+<button type="button" name="Random1" id="random1">Random Colors!</button>
 <h2>Current CSS Background</h2>
 <h3></h3>
     <script type="text/javascript"src="script.js"></script>
